# TRU-AI

./: .gitignore
backend/: pyproject.toml  requirements.txt
backend/scripts/: build_corpus.py  build_explanations.py  build_graph.py  build_inferences.py  build_query_indexes.py  extract_concepts.py  extract_relations.py  parse_corpus.py  resolve_entities.py
backend/tests/: test_concept_extractor.py  test_concept_lexicon.py  test_corpus.py  test_graph_builder.py  test_graph_compactor.py  test_graph_index.py  test_graph_query_engine.py  test_graph_resolver.py  test_graph_validator.py  test_inference_engine.py  test_inference_matcher.py  test_inference_models.py  test_inference_pipeline.py  test_inference_repository.py  test_inference_rules.py  test_inference_validator.py  test_lexical_normalizer.py  test_markdown_parser.py  test_parsing_pipeline.py  test_pathfinder.py  test_proof_builder.py  test_query_api.py  test_query_repository.py  test_reasoning_api.py  test_reasoning_explainer.py  test_reasoning_models.py  test_reasoning_pipeline.py  test_reasoning_repository.py  test_reasoning_validator.py  test_relation_extractor.py  test_relation_normalizer.py  test_relation_patterns.py  test_semantic_alias_registry.py  test_semantic_candidates.py  test_semantic_resolver.py  test_semantic_validator.py  test_sentence_splitter.py
backend/tru_ai/: __main__.py
backend/tru_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tru_ai/api/: main.py
backend/tru_ai/extraction/: concept_extractor.py  concept_lexicon.py  concept_models.py  corpus.py  (+1 more)
(+54 files in other folders)
